; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_w32_common.c_to_unicode.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_w32_common.c_to_unicode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32*)* @to_unicode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @to_unicode(i32 %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca [10 x i32], align 16
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %10 = bitcast [10 x i32]* %8 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %10, i8 0, i64 40, i1 false)
  %11 = call i32 (...) @clear_keyboard_buffer()
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* %6, align 4
  %14 = load i32*, i32** %7, align 8
  %15 = getelementptr inbounds [10 x i32], [10 x i32]* %8, i64 0, i64 0
  %16 = getelementptr inbounds [10 x i32], [10 x i32]* %8, i64 0, i64 0
  %17 = call i32 @MP_ARRAY_SIZE(i32* %16)
  %18 = call i32 @ToUnicode(i32 %12, i32 %13, i32* %14, i32* %15, i32 %17, i32 0)
  store i32 %18, i32* %9, align 4
  %19 = load i32, i32* %9, align 4
  %20 = icmp slt i32 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %3
  %22 = load i32, i32* %9, align 4
  %23 = sub nsw i32 0, %22
  store i32 %23, i32* %9, align 4
  br label %24

24:                                               ; preds = %21, %3
  %25 = load i32, i32* %9, align 4
  %26 = icmp sge i32 %25, 2
  br i1 %26, label %27, label %52

27:                                               ; preds = %24
  %28 = load i32, i32* %9, align 4
  %29 = sub nsw i32 %28, 2
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds [10 x i32], [10 x i32]* %8, i64 0, i64 %30
  %32 = load i32, i32* %31, align 4
  %33 = load i32, i32* %9, align 4
  %34 = sub nsw i32 %33, 1
  %35 = sext i32 %34 to i64
  %36 = getelementptr inbounds [10 x i32], [10 x i32]* %8, i64 0, i64 %35
  %37 = load i32, i32* %36, align 4
  %38 = call i64 @IS_SURROGATE_PAIR(i32 %32, i32 %37)
  %39 = icmp ne i64 %38, 0
  br i1 %39, label %40, label %52

40:                                               ; preds = %27
  %41 = load i32, i32* %9, align 4
  %42 = sub nsw i32 %41, 2
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds [10 x i32], [10 x i32]* %8, i64 0, i64 %43
  %45 = load i32, i32* %44, align 4
  %46 = load i32, i32* %9, align 4
  %47 = sub nsw i32 %46, 1
  %48 = sext i32 %47 to i64
  %49 = getelementptr inbounds [10 x i32], [10 x i32]* %8, i64 0, i64 %48
  %50 = load i32, i32* %49, align 4
  %51 = call i32 @decode_surrogate_pair(i32 %45, i32 %50)
  store i32 %51, i32* %4, align 4
  br label %62

52:                                               ; preds = %27, %24
  %53 = load i32, i32* %9, align 4
  %54 = icmp sge i32 %53, 1
  br i1 %54, label %55, label %61

55:                                               ; preds = %52
  %56 = load i32, i32* %9, align 4
  %57 = sub nsw i32 %56, 1
  %58 = sext i32 %57 to i64
  %59 = getelementptr inbounds [10 x i32], [10 x i32]* %8, i64 0, i64 %58
  %60 = load i32, i32* %59, align 4
  store i32 %60, i32* %4, align 4
  br label %62

61:                                               ; preds = %52
  store i32 0, i32* %4, align 4
  br label %62

62:                                               ; preds = %61, %55, %40
  %63 = load i32, i32* %4, align 4
  ret i32 %63
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @clear_keyboard_buffer(...) #2

declare dso_local i32 @ToUnicode(i32, i32, i32*, i32*, i32, i32) #2

declare dso_local i32 @MP_ARRAY_SIZE(i32*) #2

declare dso_local i64 @IS_SURROGATE_PAIR(i32, i32) #2

declare dso_local i32 @decode_surrogate_pair(i32, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
